--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     </div>
 </div>
 
+<div id="powerup-section" class="powerup-section" style="display:none;">
+    <h4>Power up</h4>
+    <button id="power-up-btn">Power up:Freez the cube for 10 seconds (Cost: 1000)</button>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
