Enhance game UI with skin selection and power-up update
Added skin selection dropdown and updated power-up button text.

--- a/index.html
+++ b/index.html
@@ -66,9 +66,16 @@
     </div>
 </div>
 
-<div id="powerup-section" class="powerup-section" style="display:none;">
-    <h4>Power up</h4>
-    <button id="power-up-btn">Power up:Freez the cube for 10 seconds (Cost: 1000)</button>
+    <select id="skin-select">
+        <option value="red">Red Skin</option>
+        <option value="blue">Blue Skin</option>
+        <option value="lava">Lava Skin</option>
+    </select>
+
+    <div id="powerup-section" class="powerup-section">
+        <h4>Power up</h4>
+        <button id="power-up-btn">Freeze the cube for 10 seconds (Cost: 1000)</button>
+    </div>
 </div>
 
 <script src="script.js"></script>
