--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <button id="reset-leaderboard">Reset Leaderboard</button>
 </div>
 
-    <div id="powerup-section" class="powerup-section">
+    <div id="powerup-section">
         <h4>Power up</h4>
         <button id="power-up-btn">Freeze the cube for 10 seconds (Cost: 1000)</button>
     </div>
@@ -81,3 +81,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
