--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 <!-- AUTH -->
 <div id="auth">
-    <h2>Bejelentkezés</h2>
+    <h2>Log in</h2>
     <input id="loginUsername" placeholder="Felhasználónév"><br>
     <input id="loginPassword" placeholder="Jelszó" type="password"><br>
-    <button id="loginBtn">Bejelentkezés</button>
+    <button id="loginBtn">Log in</button>
 
-    <h2>Regisztráció</h2>
+    <h2>Register</h2>
     <input id="regUsername" placeholder="Új felhasználónév"><br>
     <input id="regPassword" placeholder="Új jelszó" type="password"><br>
-    <button id="registerBtn">Regisztráció</button>
+    <button id="registerBtn">Register</button>
 </div>
 
 <!-- Logged in info -->
 <div id="userPanel" style="display:none">
-    <h2>Üdv, <span id="userDisplay"></span></h2>
-    <button id="logoutBtn">Kijelentkezés</button>
+    <h2>Hello, <span id="userDisplay"></span></h2>
+    <button id="logoutBtn">Log out</button>
 </div>
 
 <!-- Top menu -->
@@ -65,8 +65,8 @@
     <!-- Chain upgrade csak itt -->
     <div class="chain-upgrade-box">
         <h3>Chain Upgrade</h3>
-        <p>Szint: <span id="chain-level">0</span></p>
-        <p>Következő upgrade ára: <span id="chain-cost">20</span></p>
+        <p>Level: <span id="chain-level">0</span></p>
+        <p>Next upgrade cost: <span id="chain-cost">20</span></p>
         <p>Extra click power: <span id="chain-power">0</span></p>
         <button id="chain-upgrade-btn">Chain Upgrade</button>
     </div>
@@ -80,6 +80,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
